# simcraft

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: deploy-preview.yaml  deploy-production.yaml  publish-desktop.yaml  simcraft-ci.yml  test-simcraft.yml
crates/simcraft/: Cargo.toml  README.md
crates/simcraft/benches/: default.rs
crates/simcraft/src/: dsl.rs  lib.rs  prelude.rs
crates/simcraft/src/analysis/: utils.rs
crates/simcraft/src/model/: connection.rs  mod.rs  process.rs  process_context.rs  process_factory.rs  process_repr.rs  process_state.rs  process_trait.rs
crates/simcraft/src/model/nodes/: delay.rs  drain.rs  event_priority.rs  mod.rs  pool.rs  resource.rs  source.rs  stepper.rs
crates/simcraft/src/simulator/: context.rs  event.rs  mod.rs  simulation.rs  simulation_context.rs  simulation_state.rs  simulation_trait.rs
crates/simcraft/src/utils/: errors.rs  logging.rs  mod.rs
crates/simcraft/tests/: connection_order_test.rs  dsl_tests.rs  simulation_tests.rs
crates/simcraft/tests/common/: mod.rs
crates/simcraft/tests/nodes/: pool_tests.rs
crates/simcraft_derive/: Cargo.toml
crates/simcraft_derive/src/: lib.rs
crates/simcraft_desktop/: Cargo.toml  tauri.conf.json
crates/simcraft_desktop/src/: lib.rs
crates/simcraft_web/: Cargo.toml
crates/simcraft_web/src/: errors.rs  lib.rs  logging.rs
crates/simcraft_web/tests/: web.rs
crates/tauri/: tauri.conf.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: index.ts
frontend/src/lib/components/: ConfigurationMenu.svelte  EmptyState.svelte  FlowEditor.svelte  NodeTypesPanel.svelte  PanelLayout.svelte  Sidebar.svelte  SimulationChart.svelte  SimulationControls.svelte  TabPanel.svelte  TabSystem.svelte  ThemeToggle.svelte
frontend/src/lib/examples/: assembly-line.json  coffee-shop.json  emergency-department.json  solar-grid.json
frontend/src/lib/simcraft/: base.ts  browser.ts  desktop.ts  index.ts  remote.ts
frontend/src/lib/storage/: StorageManager.ts
frontend/src/lib/stores/: modelCommands.ts  modelManager.ts  theme.ts  (+4 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.json
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
(+12 files in other folders)
