[package]
name = "simcraft"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
wasm-bindgen = "0.2"
log = "0.4"
env_logger = "0.10"
derive_builder = "0.20.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
