[package]
name = "simcraft"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
derive_builder = "0.20.2"
lazy_static = "1.5.0"
simcraft_derive = { path = "../simcraft_derive" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
