[package]
name = "simcraft_desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "^2.4.0", features = ["devtools"] }
tauri-plugin-log = "^2.3.1"
simcraft = { path = "../simcraft" }
tungstenite = "0.20.1"
tokio-tungstenite = "0.20.1"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
url = "2.4.1"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]
